[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["minjae <akswo0607@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "main:app"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.37"
psycopg-binary = "^3.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
