[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["minjae <akswo0607@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "main:app"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.37"
psycopg-binary = "^3.2.4"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.10.6"}
psycopg2 = "^2.9.10"
jose = "^1.0.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
